--- a/src-11ty/redirect-page.html
+++ b/src-11ty/redirect-page.html
@@ -8,12 +8,12 @@ permalink: "redirect/{{ redirect.redirect }}/"
 ---
 
 <h1 class="card-header">
-  You're being redirected to your Home Assistant instance
+  Open link in your Home Assistant?
 </h1>
 <div class="card-content">
   <p>
-    Do you want to continue to your Home Assistant instance?<br />
-    You will be redirected to {{ redirect.description }}.
+    You've been linked to a url in your Home Assistant instance. You will be
+    redirected to {{ redirect.description }}.
   </p>
 </div>
 <!-- prettier-ignore-attribute -->
