--- a/src-11ty/redirect-page.html
+++ b/src-11ty/redirect-page.html
@@ -7,18 +7,28 @@ pagination:
 permalink: "redirect/{{ redirect.redirect }}/"
 ---
 
+<style>
+  .ha-card {
+    min-height: 215px;
+  }
+  my-redirect mwc-formfield {
+    display: block;
+  }
+  .card-actions a {
+    text-decoration: none;
+  }
+</style>
+
 <h1 class="card-header">
   Open link in your Home Assistant?
 </h1>
 <div class="card-content">
   <p>
-    You've been linked to a url in your Home Assistant instance. You will be
-    redirected to {{ redirect.description }}.
+    You've been linked to the page in your Home Assistant instance that will {{
+    redirect.description }}.
   </p>
 </div>
 <!-- prettier-ignore-attribute -->
-<my-handle-redirect
-  redirect='{{ redirect | json | urlencode }}'
-></my-handle-redirect>
+<my-redirect redirect='{{ redirect | json | urlencode }}'></my-redirect>
 
-<script type="module" src="/{{ manifest['my-handle-redirect.js'] }}"></script>
+<script type="module" src="/{{ manifest['my-redirect.js'] }}"></script>
