Only change url on /

--- a/src-11ty/redirect-page.html
+++ b/src-11ty/redirect-page.html
@@ -14,7 +14,8 @@ permalink: "redirect/{{ redirect.redirect }}/"
   my-redirect mwc-formfield {
     display: block;
   }
-  .card-actions a {
+  .card-actions a,
+  .current-instance .change {
     text-decoration: none;
   }
 </style>
