--- a/src-11ty/redirect-page.html
+++ b/src-11ty/redirect-page.html
@@ -20,7 +20,7 @@ permalink: "redirect/{{ redirect.redirect }}/"
 </style>
 
 <h1 class="card-header">
-  Open link in your Home Assistant?
+  Open page in your Home Assistant?
 </h1>
 <div class="card-content">
   <p>
