--- a/src-11ty/index.html
+++ b/src-11ty/index.html
@@ -9,7 +9,7 @@ layout: base_with_hero
   <p>
     You've arrived at the portal to your Home Assistant instance. It allows the
     documentation and community help you get to specific pages in your Home
-    Assistant instance. See the FAQ for a list of
+    Assistant instance. See the FAQ for the list of
     <a href="faq.html#supported-pages">supported pages</a>.
   </p>
 </div>
