--- a/src-11ty/faq.html
+++ b/src-11ty/faq.html
@@ -31,30 +31,27 @@ layout: base_with_hero
 <div class="section-header">What does My Home Assistant solve?</div>
 <div class="card-content">
   <p>
-    In the documentation and when the community is helping users, we often want
-    to link them to a specific page in their instance. However, each Home
-    Assistant instance is hosted at a different url. This website works around
-    that issue by allowing users to specify their Home Assistant url.
+    To be more helpful, the documentation wants to link the user to a specific
+    page in their instance. However, each Home Assistant instance is hosted at a
+    different url.
   </p>
   <p>
     My Home Assistant allows users to store the URL of their instance so that
-    the documentation can link the user directly to their instance. This data is
-    stored in your browser and never leaves your computer.
+    the documentation can link the user directly to the right page in their
+    instance.
   </p>
   <p>
-    When the Home Assistant documentatino links you to a place in your instance,
-    they will link you to My Home Assistant. My Home Assistant will then forward
-    this to Home Assistant, which will open the right page.
+    All the data is stored in your browser. At no point will any data leave your
+    network. My Home Assistant only redirects you to pages that provide you with
+    information about your instance or help you start an action.
   </p>
   <p>
-    All this logic happens in your browser. At no point will any data leave your
-    network. None of the supported redirects take any action. They either end up
-    on a page that will provide you with information about your instance or help
-    you start an action.
+    Following a link from My Home Assistant will never make any changes to your
+    instance.
   </p>
 </div>
 
-<div class="section-header" id="supported-pages">Supported pages</div>
+<div class="section-header" id="supported-pages">What pages are supported?</div>
 <div class="card-content">
   <p>
     The following pages are supported:
@@ -87,17 +84,17 @@ layout: base_with_hero
 <div class="card-content">
   <p>
     No, this is not possible. All pages in Home Assistant that are linkable and
-    their supported parameters are defined in this website and in the `my`
+    their supported parameters are pre-defined in this website and in the "my"
     integration in Home Assistant.
   </p>
 </div>
 
 <div class="section-header">
-  How can I disable this website from working for my instance
+  How can I disable this website from working for my instance?
 </div>
 <div class="card-content">
   <p>
-    This website requires Home Assistant to have the `my` integration enabled.
+    This website requires Home Assistant to have the "my" integration enabled.
     If you don't have this integration set up, links from this website won't
     work.
   </p>
