--- a/src-11ty/index.html
+++ b/src-11ty/index.html
@@ -7,9 +7,9 @@ layout: base_with_hero
 </h1>
 <div class="card-content">
   <p>
-    You've arrived at the portal to your Home Assistant instance. It allows the
-    documentation and community help you get to specific pages in your Home
-    Assistant instance. See the FAQ for the list of
+    You've arrived at the portal to your Home Assistant instance. My Home
+    Assistant allows the documentation to link you to specific pages in your
+    Home Assistant instance. See the FAQ for the list of
     <a href="faq.html#supported-pages">supported pages</a>.
   </p>
 </div>
