--- a/src-11ty/redirect-page.html
+++ b/src-11ty/redirect-page.html
@@ -33,14 +33,14 @@ permalink: "redirect/{{ redirect.redirect }}/"
     You've been linked to the page that will {{ redirect.description }}.
   </p>
 </div>
-<!-- prettier-ignore-attribute -->
+
 <my-redirect
   redirect="{{ redirect.redirect }}"
   {%
   if
   redirect.params
   %}
-  params='{{ redirect.params | json }}'
+  params="{{ redirect.params | escapedJson }}"
   {%
   endif
   %}
@@ -50,5 +50,4 @@ permalink: "redirect/{{ redirect.redirect }}/"
     …
   </div>
 </my-redirect>
-
 <script defer src="/js/{{ manifest['my-redirect.js'] }}"></script>
