--- a/src-11ty/redirect-page.html
+++ b/src-11ty/redirect-page.html
@@ -19,6 +19,7 @@ permalink: "redirect/{{ redirect.redirect }}/"
   }
   .card-actions {
     padding-right: 8px;
+    height: 37px;
   }
   .card-actions a {
     text-decoration: none;
@@ -42,5 +43,6 @@ permalink: "redirect/{{ redirect.redirect }}/"
     Configured Home Assistant url:<br />
     …
   </div>
+  <div class="card-actions"></div>
 </my-redirect>
 <script defer src="/js/{{ manifest['my-redirect.js'] }}"></script>
