--- a/src-11ty/index.html
+++ b/src-11ty/index.html
@@ -2,6 +2,23 @@
 layout: base_with_hero
 ---
 
+<style>
+.instance-header {
+  font-weight: 600;
+  letter-spacing: 0.05em;
+  font-size: 12px;
+  padding-left: 16px;
+}
+.instance {
+  padding: 0 16px 16px;
+  display: flex;
+  justify-content: space-between;
+}
+.error {
+  color: darkred;
+}
+</style>
+
 <h1 class="card-header">
   My Home Assistant
 </h1>
@@ -15,9 +32,12 @@ layout: base_with_hero
 </div>
 
 <my-index>
-  <div class="card-content current-instance">
-    Configured Home Assistant url:<br />
-    …
+  <div class='instance-header'>HOME ASSISTANT INSTANCE</div>
+  <div class='instance'>
+    <div>
+      <div>&nbsp;</div>
+      <div>&nbsp;</div>
+    </div>
   </div>
 </my-index>
 
