Add installation type

--- a/src-11ty/index.html
+++ b/src-11ty/index.html
@@ -37,6 +37,7 @@ layout: base_with_hero
     <div>
       <div>&nbsp;</div>
       <div>&nbsp;</div>
+      <div>&nbsp;</div>
     </div>
   </div>
 </my-index>
