--- a/src-11ty/index.html
+++ b/src-11ty/index.html
@@ -2,26 +2,7 @@
 layout: base_with_hero
 ---
 
-<style>
-.instance-header {
-  font-weight: 600;
-  letter-spacing: 0.05em;
-  font-size: 12px;
-  padding-left: 16px;
-}
-.instance {
-  padding: 0 16px 16px;
-  display: flex;
-  justify-content: space-between;
-}
-.error {
-  color: darkred;
-}
-</style>
-
-<h1 class="card-header">
-  My Home Assistant
-</h1>
+<h1 class="card-header">My Home Assistant</h1>
 <div class="card-content">
   <p>
     You've arrived at the portal to your Home Assistant instance. My Home
@@ -32,11 +13,10 @@ layout: base_with_hero
 </div>
 
 <my-index>
-  <div class='instance-header'>HOME ASSISTANT INSTANCE</div>
-  <div class='instance'>
+  <div class="instance-header">HOME ASSISTANT INSTANCE</div>
+  <div class="instance">
     <div>
-      <div>&nbsp;</div>
-      <div>&nbsp;</div>
+      <div>Finding instance…</div>
       <div>&nbsp;</div>
     </div>
   </div>
