Revert get info from hass

--- a/src-11ty/index.html
+++ b/src-11ty/index.html
@@ -16,8 +16,7 @@ layout: base_with_hero
   <div class="instance-header">HOME ASSISTANT INSTANCE</div>
   <div class="instance">
     <div>
-      <div>Finding instance…</div>
-      <div>&nbsp;</div>
+      <div>Loading...</div>
     </div>
   </div>
 </my-index>
