--- a/src-11ty/redirect-page.html
+++ b/src-11ty/redirect-page.html
@@ -42,10 +42,7 @@ permalink: "redirect/{{ redirect.redirect }}/"
 >
   <div class="instance-header">HOME ASSISTANT INSTANCE</div>
   <div class="instance">
-    <div>
-      <div>Finding instance…</div>
-      <div>&nbsp;</div>
-    </div>
+      <div>Loading...</div>
   </div>
   <div class='card-actions'>
     <div></div><div class='fake-button'>OPEN LINK</div>
