--- a/src-11ty/create-link.html
+++ b/src-11ty/create-link.html
@@ -19,6 +19,6 @@ layout: base_with_hero
     Assistant instance.
   </p>
 </div>
-<my-create-redirect></my-create-redirect>
+<my-create-link></my-create-link>
 
-<script defer src="/js/{{ manifest['my-create-redirect.js'] }}"></script>
+<script defer src="/js/{{ manifest['my-create-link.js'] }}"></script>
