--- a/src-11ty/index.html
+++ b/src-11ty/index.html
@@ -5,14 +5,13 @@ layout: base_with_hero
 <h1 class="card-header">My Home Assistant</h1>
 <div class="card-content">
   <p>
-    You've arrived at the portal to your Home Assistant instance. My Home
-    Assistant allows the documentation to link you to specific pages in your
-    Home Assistant instance. See the FAQ for the list of
-    <a href="faq.html#supported-pages">supported pages</a>.
+    My Home Assistant allows the documentation to link you to specific pages in
+    your Home Assistant instance. See <a href="faq.html">the FAQ</a> for more information.
   </p>
 </div>
 
 <my-index>
+  <h1 class="card-header">
   <div class="instance-header">HOME ASSISTANT INSTANCE</div>
   <div class="instance">
     <div>
