--- a/src-11ty/faq.html
+++ b/src-11ty/faq.html
@@ -21,11 +21,11 @@ layout: base_with_hero
     text-decoration: none;
     line-height: 48px;
     color: black;
-    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" /></svg>');
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="%23212121"><path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" /></svg>');
     background-repeat: no-repeat;
     background-position: right 10px center;
     padding: 0 16px;
-    border-top: 1px solid #8080802e;
+    border-top: 1px solid #e8e8e8;
   }
 </style>
 
