Add a link to create link

--- a/src-11ty/create-link.html
+++ b/src-11ty/create-link.html
@@ -12,7 +12,7 @@ layout: base_with_hero
   <a href="/">&laquo; Back to My Home Assistant</a>
 </div>
 
-<h1 class="card-header">Create a My Home Assistant redirect link</h1>
+<h1 class="card-header">Create a redirect link</h1>
 <div class="card-content">
   <p>
     Create a redirect link to help people get to the right place in their Home
