Styling tweaks on create links page

--- a/src-11ty/create-link.html
+++ b/src-11ty/create-link.html
@@ -14,6 +14,18 @@ layout: base_with_hero
   input {
     width: 100%;
     box-sizing: border-box;
+    margin: 8px 0;
+    padding: 8px;
+    border: 1px solid rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
+  }
+  textarea {
+    resize: vertical;
+  }
+  textarea:focus,
+  input:focus {
+    outline: none;
+    border-color: #04a9f4;
   }
 </style>
 
