Add name to redirects

--- a/src-11ty/faq.html
+++ b/src-11ty/faq.html
@@ -92,7 +92,7 @@ layout: base_with_hero
     href="{{ redirect | redirectExamplePath }}"
     title="Introduced in {{ redirect.introduced | version }}."
   >
-    {{ redirect.description | title }}
+    {{ redirect.name }}
   </a>
   {% endfor %}
 </div>
