Remove word 'redirect'

--- a/src-11ty/create-link.html
+++ b/src-11ty/create-link.html
@@ -33,7 +33,7 @@ layout: base_with_hero
   <a href="/">&laquo; Back to My Home Assistant</a>
 </div>
 
-<h1 class="card-header">Create a redirect link</h1>
+<h1 class="card-header">Create a link</h1>
 <my-create-link></my-create-link>
 
 <script defer src="/js/{{ manifest['my-create-link.js'] }}"></script>
