--- a/src-11ty/index.html
+++ b/src-11ty/index.html
@@ -6,15 +6,15 @@ layout: base_with_hero
 <div class="card-content">
   <p>
     My Home Assistant allows the documentation to link you to specific pages in
-    your Home Assistant instance. See <a href="faq.html">the FAQ</a> for more information.
+    your Home Assistant instance. See <a href="faq.html">the FAQ</a> for more
+    information.
   </p>
 </div>
 
 <my-index>
-  <h1 class="card-header">
   <div class="instance-header">HOME ASSISTANT INSTANCE</div>
   <div class="instance">
-    <div>
+    <div class="info">
       <div>Loading...</div>
     </div>
   </div>
