Fix ha-card initial styling for redirect page

--- a/src-11ty/redirect-page.html
+++ b/src-11ty/redirect-page.html
@@ -9,10 +9,12 @@ permalink: "redirect/{{ redirect.redirect }}/"
 
 <style>
   .ha-card {
-    min-height: 226px;
+    min-height: 241px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+  }
+  .card-content {
+    flex: 1;
   }
   .card-actions {
     padding-right: 8px;
