Update instance info

--- a/src-11ty/index.html
+++ b/src-11ty/index.html
@@ -12,10 +12,10 @@ layout: base_with_hero
 </div>
 
 <my-index>
-  <div class="instance-header">HOME ASSISTANT INSTANCE</div>
-  <div class="instance">
-    <div class="info">
-      <div>Loading...</div>
+  <div class="instance-info">
+    <div>
+      <div class="instance-header">HOME ASSISTANT INSTANCE</div>
+      Loading...
     </div>
   </div>
 </my-index>
