Move instance info out of redirect card

--- a/src-11ty/index.html
+++ b/src-11ty/index.html
@@ -2,6 +2,39 @@
 layout: base_with_hero
 ---
 
+<style>
+  .instance-info {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 16px 16px;
+    align-items: center;
+  }
+  .instance-header {
+    font-weight: 600;
+    letter-spacing: 0.05em;
+    font-size: 12px;
+    line-height: 1em;
+  }
+  .error {
+    color: #db4437;
+    font-weight: bold;
+  }
+  button.empty {
+    display: inline-flex;
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    font: inherit;
+    text-align: left;
+    cursor: pointer;
+  }
+  button.empty:active,
+  button.empty:focus {
+    outline: none;
+  }
+</style>
+
 <h1 class="card-header">My Home Assistant</h1>
 <div class="card-content">
   <p>
