Fix Safari history.back

--- a/src-11ty/redirect-page.html
+++ b/src-11ty/redirect-page.html
@@ -50,7 +50,7 @@ permalink: "redirect/{{ redirect.redirect }}/"
 
 <div class="card-actions">
   <div></div>
-  <div class="fake-button">OPEN LINK</div>
+  <div class="fake-button open-link">OPEN LINK</div>
 </div>
 
 <script>
