--- a/src-11ty/index.html
+++ b/src-11ty/index.html
@@ -2,20 +2,53 @@
 layout: base_with_hero
 ---
 
+<style>
+  .instance-info {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 16px 16px;
+    align-items: center;
+  }
+  .instance-header {
+    font-weight: 600;
+    letter-spacing: 0.05em;
+    font-size: 12px;
+    line-height: 1em;
+  }
+  .error {
+    color: #db4437;
+    font-weight: bold;
+  }
+  button.empty {
+    display: inline-flex;
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    font: inherit;
+    text-align: left;
+    cursor: pointer;
+  }
+  button.empty:active,
+  button.empty:focus {
+    outline: none;
+  }
+</style>
+
 <h1 class="card-header">My Home Assistant</h1>
 <div class="card-content">
   <p>
     My Home Assistant allows the documentation to link you to specific pages in
-    your Home Assistant instance. See <a href="faq.html">the FAQ</a> for more information.
+    your Home Assistant instance. See <a href="faq.html">the FAQ</a> for more
+    information.
   </p>
 </div>
 
 <my-index>
-  <h1 class="card-header">
-  <div class="instance-header">HOME ASSISTANT INSTANCE</div>
-  <div class="instance">
+  <div class="instance-info">
     <div>
-      <div>Loading...</div>
+      <div class="instance-header">HOME ASSISTANT INSTANCE</div>
+      Loading...
     </div>
   </div>
 </my-index>
