Clean up templating a bit

--- a/src-11ty/create-link.html
+++ b/src-11ty/create-link.html
@@ -1,5 +1,5 @@
 ---
-layout: base_with_hero
+layout: base_card_with_hero
 title: Create a link
 description: Generate links to any place in Home Assistant.
 ---
