--- a/src-11ty/index.html
+++ b/src-11ty/index.html
@@ -1,5 +1,5 @@
 ---
-layout: base_with_hero
+layout: base_card_with_hero
 description: Link you to specific pages in your Home Assistant instance.
 ---
 
