--- a/src-11ty/index.html
+++ b/src-11ty/index.html
@@ -4,6 +4,9 @@ description: Link you to specific pages in your Home Assistant instance.
 ---
 
 <style>
+  my-url-input {
+    margin-top: 16px;
+  }
   .instance-info {
     display: flex;
     justify-content: space-between;
