Add link back to supported pages

--- a/src-11ty/faq.html
+++ b/src-11ty/faq.html
@@ -93,7 +93,7 @@ description: Answers to all your questions about My Home Assistant.
   </p>
 </div>
 
-<div class="section-header">What pages are supported?</div>
+<div class="section-header" id="supported-pages">What pages are supported?</div>
 <div class="redirects">
   {% for redirect in redirects %}
   <a
