Clean up templating a bit and show troubleshooting (#34)

--- a/src-11ty/faq.html
+++ b/src-11ty/faq.html
@@ -1,5 +1,5 @@
 ---
-layout: base_with_hero
+layout: base_card_with_hero
 title: FAQ
 description: Answers to all your questions about My Home Assistant.
 ---
@@ -60,11 +60,17 @@ description: Answers to all your questions about My Home Assistant.
   </p>
 </div>
 
-<div class="section-header">
+<div class="section-header" id="404">
   Why do I get a "404 Not Found" when I open a link?
 </div>
 <div class="card-content">
-  <p>This website requires you to run at least Home Assistant 2021.3.</p>
+  <p>
+    This website requires you to run at least Home Assistant 2021.3 and have the
+    <a href="https://www.home-assistant.io/integrations/my/"
+      >"my" integration</a
+    >
+    enabled.
+  </p>
 </div>
 
 <div class="section-header">
