--- a/src-11ty/index.html
+++ b/src-11ty/index.html
@@ -1,9 +1,12 @@
 ---
-layout: base_with_hero
+layout: base_card_with_hero
 description: Link you to specific pages in your Home Assistant instance.
 ---
 
 <style>
+  my-url-input {
+    margin-top: 16px;
+  }
   .instance-info {
     display: flex;
     justify-content: space-between;
