--- a/src-11ty/create-link.html
+++ b/src-11ty/create-link.html
@@ -1,5 +1,6 @@
 ---
 layout: base_card_with_hero
+javascript_source: my-create-link.js
 title: Create a link
 description: Generate links to any place in Home Assistant.
 ---
@@ -40,5 +41,3 @@ description: Generate links to any place in Home Assistant.
 <my-create-link>
   <div class="card-content">Loading...</div>
 </my-create-link>
-
-<script defer src="/js/{{ manifest['my-create-link.js'] }}"></script>
