Add a different header

--- a/src-11ty/index.html
+++ b/src-11ty/index.html
@@ -35,13 +35,18 @@ description: Link you to specific pages in your Home Assistant instance.
   button.empty:focus {
     outline: none;
   }
+  .badge {
+    height: 28px;
+  }
 </style>
 
-<h1 class="card-header">My Home Assistant</h1>
 <div class="card-content">
   My Home Assistant allows the documentation to link you to specific pages in
-  your Home Assistant instance. See <a href="faq.html">the FAQ</a> for more
-  information.
+  your Home Assistant instance:<br />
+  <br />
+  <a href="https://my.home-assistant.io/redirect/info"
+    ><img class="badge" src="https://my.home-assistant.io/badges/info.svg"
+  /></a>
 </div>
 
 <my-index>
