--- a/src-11ty/redirect-page.html
+++ b/src-11ty/redirect-page.html
@@ -9,10 +9,11 @@ permalink: "redirect/{{ redirect.redirect }}/"
 ---
 
 <style>
-  .open-link-card {
+  .ha-card {
     min-height: 150px;
     display: flex;
     flex-direction: column;
+    border-top: 8px solid #03a9f4;
   }
   .card-content {
     flex: 1;
@@ -47,7 +48,7 @@ permalink: "redirect/{{ redirect.redirect }}/"
   }
 </style>
 
-<div class="ha-card open-link-card">
+<div class="ha-card">
   <h1 class="card-header">Open page in your Home Assistant?</h1>
   <div class="card-content">
     You've been linked to the page that will {{ redirect.description }}.
