Add confirmation to copy button

--- a/src-11ty/create-link.html
+++ b/src-11ty/create-link.html
@@ -31,6 +31,9 @@ description: Generate links to any place in Home Assistant.
     outline: none;
     border-color: #04a9f4;
   }
+  .success {
+    --mdc-theme-primary: green;
+  }
 </style>
 
 <div class="back">
