Actually specify card width on page

--- a/src-11ty/animation.html
+++ b/src-11ty/animation.html
@@ -6,7 +6,8 @@ description: Promotional animation
 
 <style>
   .ha-card {
-    width: 600px;
+    width: 500px;
+    max-width: initial;
     height: 315px;
     display: flex;
     align-items: center;
